--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        //AGREGANDO MAVEN
+        maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases' }
     }
 }
 
